DuPont DevSB/src/objects/ffirule__ClickLinkAnotherSourceTest__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffirule__ATextField__c</fullName>
        <label>ATextField</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ClickLinkSourceLineItemTest__c</fullName>
        <label>ClickLink Source Line Item Test</label>
        <referenceTo>ffirule__IntegrationRuleSourceLineItemTest__c</referenceTo>
        <relationshipLabel>ClickLink Another Source Tests</relationshipLabel>
        <relationshipName>ClickLinkAnotherSourceTests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ClickLink Another Source Test</label>
    <listViews>
        <fullName>ffirule__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CATSTS{00000000}</displayFormat>
        <label>ClickLink Another Source Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Another Source Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>